# ntd-model-sch

./: .gitignore  MANIFEST.in  README.md  format_coverage.R  pyproject.toml  schisto_coverage_formatted.csv  setup.py
.github/workflows/: ci.yml  lint.yml
sch_simulation/: ParallelFuncs.py  __init__.py  helsim_FUNC_KK.py  helsim_RUN_KK.py  main.py
sch_simulation/amis_integration/: .gitignore  DESCRIPTION  README.md  amis_integration.R  amis_integration.py  map_samples_example.R  sth_fitting.R  sth_fitting_debug.R  sth_projections.R  sth_projections.py  sth_projections_per_IU.py  sth_projections_per_batch.py
sch_simulation/amis_integration/data/: map.csv
sch_simulation/data/: mansoni_params.txt
sch_simulation/data/SCH_params/: haematobium_params.txt  mansoni_coverage_scenario_3_all_countries.xlsx  mansoni_high_burden_params.txt  mansoni_low_burden_params.txt
sch_simulation/data/STH_params/: STHScenario1.xlsx  STHScenario2a.xlsx  STHScenario2b.xlsx  STHScenario2c.xlsx  STHScenario3b.xlsx  ascaris_coverage_scenario_1.xlsx  ascaris_coverage_scenario_2a.xlsx  ascaris_coverage_scenario_2b.xlsx  ascaris_coverage_scenario_3a.xlsx  ascaris_params.txt  ascaris_params_Scen3.txt  ascaris_params_projections.txt  ascaris_params_scenario_3a.txt  hookworm_coverage_scenario_3b.xlsx  hookworm_params.txt  hookworm_params_Scen3.txt  hookworm_params_projections.txt  hookworm_params_scenario_3b.txt  trichuris_coverage_scenario_2c.xlsx  trichuris_params.txt  trichuris_params_Scen3.txt  trichuris_params_projections.txt  trichuris_params_scenario_3a.txt
sch_simulation/data/endgame_inputs/: IUs_MTP_100.csv  IUs_MTP_1002.csv  IUs_MTP_1004.csv  IUs_MTP_1006.csv  IUs_MTP_1018.csv  IUs_MTP_1021.csv  IUs_MTP_1023.csv  IUs_MTP_1026.csv  IUs_MTP_1027.csv  IUs_MTP_1030.csv  IUs_MTP_1038.csv  IUs_MTP_1043.csv  IUs_MTP_1045.csv  IUs_MTP_1046.csv  IUs_MTP_1047.csv  IUs_MTP_1051.csv  IUs_MTP_1052.csv  IUs_MTP_1057.csv  IUs_MTP_1059.csv  IUs_MTP_1060.csv  IUs_MTP_1061.csv  IUs_MTP_1064.csv  IUs_MTP_1073.csv  IUs_MTP_1074.csv  IUs_MTP_1084.csv  IUs_MTP_1085.csv  IUs_MTP_1096.csv  IUs_MTP_1098.csv  (+4044 more)
sch_simulation/helsim_FUNC_KK/: ParallelFuncs.py  __init__.py  configuration.py  events.py  file_parsing.py  helsim_structures.py  prevalence_column_names.py  results_processing.py  utils.py
tests/: test_importation.py  test_single_simulation.py
tests/amis_integration/: test_amis_integration.py
tests/data/: prevalence_reference.txt
tests/helsim_FUNC_KK/: test_file_parsing.py
(+30 files in other folders)
