[build-system]
requires = ["setuptools==70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sch_simulation"
version = "0.0.1"
authors = [
  {name = "NTD Modelling Consortium"},
]
description = "SCH simulation model"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

requires-python = ">= 3.6"
dependencies = [
  "numpy==1.26",
  "scipy==1.13",
  "pandas==2.2",
  "joblib==1.4",
  "matplotlib==3.9",
]

[project.urls]
Homepage = "https://github.com/NTD-Modelling-Consortium/ntd-model-sch"

[tool.setuptools]
packages = ["sch_simulation"]
